--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,15 @@
+<%= render 'list', book: @book %>
 
+<h1>Books</h1>
+<table>
+  <thead>
+    <th>Title</th>
+    <th>Opinion</th>
+  </thead>
 
-
-<!--後でbooks new のviewに記述する-->
+<div>
+  <% @books.each do |book| %>
+  <p><%= link_to book.title, book_path(book.id) %></p>
+  <p><%= book.body %></p>
+</div>
+<% end %>
