--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,8 +1,1 @@
-<h1>New book</h1>
-  <%= form_with model: @book do |f| %>
-    <h4>title</h4>
-      <%= f.text_field :title %>
-    <h4>opinion</h4>
-      <%= f.text_area :body %>
-    <div><%= f.submit 'Create book' %></div>
-  <% end %>
+<%= render 'list', book: @book %>
