--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,19 @@
-<h1>Books#detail</h1>
-<td><%= link_to "Edit", edit_book_path(@book.id) %></td>
-<td><%= link_to "Destroy", new_book_path(@book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+<%= render 'list', book: @book %>
 
+<%= render 'layouts/list', book: @book %>
+
+<h1>Book detail</h1>
+
+<div>
+  <p><%= @book.title %></p>
+  <p><%= @book.body %></p>
+</div>
+
+<tbody>
+  <tr>
+    <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
+  <% if @book.user == current_user %>
+    <%= link_to "Delete", book_path(@book.id), method: :delete %>
+  <% end %>
+  </tr>
+</tbody>
