--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<% flash.each do |key, value| %>
+  <p class = "alert alert-<%= key %>">
+    <%= value %>
+  </p>
+<% end %>
+
+<%= render 'list', book: @book %>
+
+<!--ユーザーの投稿情報の記述-->
+<h1>Books</h1>
+
+<% @books.each do |book| %>
+<div>
+  <p>Title：<%= link_to book.title, book_path(book.id) %></p>
+  <p>Opinion：<%= book.body %></p>
+</div>
+<% end %>
