--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,5 +1,14 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this obj from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <h1>New book</h1>
-  <%= form_with model: book do |f| %>
+  <%= form_with model: Book.new do |f| %>
     <h4>title</h4>
       <%= f.text_field :title %>
     <h4>opinion</h4>
