--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,29 @@
+  <body>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+  </body>
+
+
+<%= render 'users/list', user: @user %>
 <%= render 'list', book: @book %>
 
-<h1>Books</h1>
-<table>
-  <thead>
+
+<thead>
+  <% @books.each do |book| %>
+  <tr>
+    <th></th>
     <th>Title</th>
     <th>Opinion</th>
-  </thead>
+    <th colspan="3"></th>
+  </tr>
+</thead>
 
-<div>
-  <% @books.each do |book| %>
-  <p><%= link_to book.title, book_path(book.id) %></p>
-  <p><%= book.body %></p>
-</div>
+<tbody>
+  <tr>
+    <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+  </tr>
 <% end %>
+</tbody>
