--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,19 +1,27 @@
+  <body>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+  </body>
+
+<%= render 'users/list', user: @user %>
 <%= render 'list', book: @book %>
 
-<%= render 'layouts/list', book: @book %>
 
 <h1>Book detail</h1>
 
 <div>
-  <p><%= @book.title %></p>
+  <p><%= image_tag @book.user.get_profile_image(100,100) %></p>
+  <p><%= link_to @book.title, edit_book_path(@book) %></p>
   <p><%= @book.body %></p>
+  <p><%= link_to @book.user.name, user_path(current_user) %></p>
 </div>
 
 <tbody>
   <tr>
+    <% if @book.user == current_user %>
     <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
-  <% if @book.user == current_user %>
-    <%= link_to "Delete", book_path(@book.id), method: :delete %>
+    <%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？"%>
   <% end %>
   </tr>
 </tbody>
