--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,9 @@
+  <body>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+  </body>
+
 <h1>welcome to Bookers</h1>
 <p>in Bookers,<br>
 you can share and exchange your opinions, impressions, and emotions<br>
