--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,10 +1,11 @@
-<h1>New book</h1>
-  <%= form_with model: Book.new do |f| %>
-    <h4>title</h4>
-      <%= f.text_field :title %>
-    <h4>opinion</h4>
-      <%= f.text_area :body %>
-    <div><%= f.submit 'Create book' %></div>
-  <% end %>
+<div>
+  <h1>User info</h1>
+  <%= image_tag @user.get_profile_image(100,100) %>
+  <% if @user == current_user %>
+    <h3>Name <%= @user.name %></h3>
+  <h3>Introduction <%= @user.introduction %></h3>
+    <p><%= link_to "edit", edit_user_path(@user) %></p>
+    <% end %>
 
-<!--userの部分テンプレート記述-->
+
+</div>
