--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,45 +14,56 @@
 
 <body>
   <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+     <%= link_to "Bookers", root_path, class: 'navbar-brand' %>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
     <% if user_signed_in? %>
 
+    <div class="navbar-collapse collapse show" id="navbarNavDropdown" style="">
+        <ul class="navbar-nav ml-auto">
+
+
+
+
+
       <li>
-        <%= link_to "Bookers", root_path %>
-      </li>
-      <li>
-        <%= link_to "Home", user_path(current_user.id) %>
+        <%= link_to "Home", user_path(current_user.id), class: "nav-link text-light" %><i class="fas fa-home"></i>
       </li>
 
       <li>
-        <%= link_to "Users", users_path %>
+        <%= link_to "Users", users_path, class: "nav-link text-light"  %>
 
       </li>
       <li>
-        <%= link_to "Books", books_path %>
+        <%= link_to "Books", books_path, class: "nav-link text-light"  %>
       </li>
 
       <li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link text-light"  %>
       </li>
     <% else %>
 
       <li>
-        <%= link_to "Bookers", root_path %>
-      </li>
-
-      <li>
-        <%= link_to "Home", root_path %>
+        <%= link_to "Home", root_path, class: "nav-link text-light"  %>
       </li>
       <li>
-        <%= link_to "About", homes_about_path %>
+        <%= link_to "About", homes_about_path, class: "nav-link text-light"  %>
       </li>
       <li>
-        <%= link_to "Sign up", new_user_registration_path %>
+        <%= link_to "Sign up", new_user_registration_path, class: "nav-link text-light"  %>
       </li>
       <li>
-        <%= link_to "Log in", new_user_session_path %>
+        <%= link_to "Log in", new_user_session_path, class: "nav-link text-light"  %>
       </li>
+      </ul>
+    </div>
     <% end %>
+      </div>
+    </nav>
   </header>
     <%= yield %>
   </body>
