--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -13,5 +13,5 @@
       <%= f.text_field :title %>
     <h4>opinion</h4>
       <%= f.text_area :body %>
-    <div><%= f.submit 'Create book' %></div>
+    <div><%= f.submit 'Create Book' %></div>
   <% end %>
