--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,7 +14,7 @@
   <p><%= image_tag @book.user.get_profile_image(100,100) %></p>
   <p><%= link_to @book.title, edit_book_path(@book) %></p>
   <p><%= @book.body %></p>
-  <p><%= link_to @book.user.name, user_path(current_user) %></p>
+  <p><%= link_to @book.user.name, user_path(@user) %></p>
 </div>
 
 <tbody>
