--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,6 @@
     <div class="navbar-collapse collapse show" id="navbarNavDropdown" style="">
         <ul class="navbar-nav ml-auto">
 
-
-
-
-
       <li>
         <%= link_to "Home", user_path(current_user.id), class: "nav-link text-light" %><i class="fas fa-home"></i>
       </li>
@@ -45,13 +41,17 @@
       <li>
         <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link text-light"  %>
       </li>
+      </ul>
+    </div>
     <% else %>
 
+    <div class="navbar-collapse collapse show" id="navbarNavDropdown" style="">
+        <ul class="navbar-nav ml-auto">
       <li>
         <%= link_to "Home", root_path, class: "nav-link text-light"  %>
       </li>
       <li>
-        <%= link_to "About", homes_about_path, class: "nav-link text-light"  %>
+        <%= link_to "About", home_about_path, class: "nav-link text-light"  %>
       </li>
       <li>
         <%= link_to "Sign up", new_user_registration_path, class: "nav-link text-light"  %>
@@ -61,6 +61,8 @@
       </li>
       </ul>
     </div>
+
+
     <% end %>
       </div>
     </nav>
