--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,5 +16,5 @@
   <label for="inputIntroduction">Introduction</label>
   <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction" %>
 
-  <%= f.submit "Update user" %>
+  <%= f.submit "Update User" %>
 <% end %>
