--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -7,11 +7,26 @@
   </ul>
 <% end %>
 
-<h1>New book</h1>
-  <%= form_with model: Book.new do |f| %>
-    <h4>title</h4>
-      <%= f.text_field :title %>
-    <h4>opinion</h4>
-      <%= f.text_area :body %>
-    <div><%= f.submit 'Create Book' %></div>
-  <% end %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+
+  <h2 class="mt-3">New book</h2>
+    <%= form_with model: Book.new do |f| %>
+
+      <div class="form-group">
+        <label for="book_title">Title</label>
+        <%= f.text_field :title %>
+      </div>
+
+      <div class="form-group">
+        <label for="book_opinion">opinion</label>
+        <%= f.text_area :body %>
+      </div>
+
+      <div class="form-group"><%= f.submit 'Create Book', class:"btn btn-success" %></div>
+    <% end %>
+
+</div>
+  </div>
+    </div>
