--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,9 +1,31 @@
-<div>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+
   <h1>User info</h1>
   <%= image_tag user.get_profile_image(100,100) %>
-    <h3>Name <%= user.name %></h3>
-  <h3>Introduction <%= user.introduction %></h3>
-    <p><%= link_to "edit", edit_user_path(user) %></p>
 
+  <table class="table">
+    <tbody>
+      <tr></tr>
+      <tr>
+        <th>Name</th>
+        <th><%= user.name %></th>
+      </tr>
+  
+      <tr>
+        <th>Introduction</th>
+        <th><%= user.introduction %></th>
+      </tr>
+    </tbody>
+  </table>
+
+    <div class="row">
+      <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
+      <i class="fas fa-user-cog"></i>
+      <% end %>
+    </div>
 
 </div>
+  </div>
+    </div>
