--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,6 +17,9 @@
 <% @books.each do |book| %>
 <div>
   <p>Title：<%= link_to book.title, book_path(book.id) %></p>
+      <%= link_to user_path(book.user.id) do  %>
+      <%= image_tag book.user.get_profile_image(100,100) %>
+      <% end %>
   <p>Opinion：<%= book.body %></p>
 </div>
 <% end %>
