--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome to Bookers!</h1>
+<h1>Welcome to <li class="fas fa-book"></li><strong>Bookers!</strong></h1>
 <small>Copyright (c) inflatop.inc</small>
