--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,16 +10,26 @@
 
 
 <!--ユーザーの投稿情報の記述-->
-
-
-<h1>Books</h1>
+<div class="col-md-8 offset-md-1">
+  <h2>Books</h2>
 
 <% @books.each do |book| %>
-<div>
-  <p>Title：<%= link_to book.title, book_path(book.id) %></p>
-      <%= link_to user_path(book.user.id) do  %>
-      <%= image_tag book.user.get_profile_image(100,100) %>
-      <% end %>
-  <p>Opinion：<%= book.body %></p>
-</div>
-<% end %>
+
+    <table class="table table-hover table-inverse">
+      <thead>
+        <tr>
+          <th></th>
+            <th>Title：<%= link_to book.title, book_path(book.id) %></th>
+                <%= link_to user_path(book.user.id) do  %>
+                <%= image_tag book.user.get_profile_image(100,100) %>
+                <% end %>
+            <th>Opinion：<%= book.body %></th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+
+
+  </div>
+
+
+  <% end %>
