--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -16,12 +16,12 @@
 
       <div class="form-group">
         <label for="book_title">Title</label>
-        <%= f.text_field :title %>
+        <%= f.text_field :title, class:  "form-control book_title" %>
       </div>
 
       <div class="form-group">
         <label for="book_opinion">opinion</label>
-        <%= f.text_area :body %>
+        <%= f.text_area :body, class: "form-control book_title" %>
       </div>
 
       <div class="form-group"><%= f.submit 'Create Book', class:"btn btn-success" %></div>
