--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,3 +1,6 @@
+<main>
+  <p id="notice"></p>
+
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
@@ -12,7 +15,7 @@
         <th>Name</th>
         <th><%= user.name %></th>
       </tr>
-  
+
       <tr>
         <th>Introduction</th>
         <th><%= user.introduction %></th>
@@ -29,3 +32,5 @@
 </div>
   </div>
     </div>
+
+</main>
