--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,7 @@
-<h1>Welcome to <li class="fas fa-book"></li><strong>Bookers!</strong></h1>
-<small>Copyright (c) inflatop.inc</small>
+<div class="container">
+  <div class="row">
+
+<h1 class="px-3 mx-auto">Welcome to <li class="fas fa-book"></li><strong>Bookers</strong>!</h1>
+
+  </div>
+</div>
