--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -7,9 +7,7 @@
   </ul>
 <% end %>
 
-<div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-3">
+
 
   <h2 class="mt-3">New book</h2>
     <%= form_with model: Book.new do |f| %>
@@ -20,13 +18,11 @@
       </div>
 
       <div class="form-group">
-        <label for="book_opinion">opinion</label>
+        <label for="book_opinion">Opinion</label>
         <%= f.text_area :body, class: "form-control book_title" %>
       </div>
 
       <div class="form-group"><%= f.submit 'Create Book', class:"btn btn-success" %></div>
     <% end %>
 
-</div>
-  </div>
-    </div>
+
