--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,22 +4,29 @@
     <% end %>
   </body>
 
+<div class="container px-5 px-sm-0">
+  <div class="row">
+      <div class="col-md-3">
 
 <%= render 'users/list', user: @user %>
 <%= render 'list', book: @book %>
 
+      </div>
+<div class="col-md-8 offset-md-1">
+  <h2>Books</h2>
 
-<thead>
-  <% @books.each do |book| %>
-  <tr>
-    <th></th>
-    <th>Title</th>
-    <th>Opinion</th>
-    <th colspan="3"></th>
-  </tr>
-</thead>
+  <table class="table table-hover table-inverse">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
 <tbody>
+  <% @books.each do |book| %>
   <tr>
     <td>
       <%= link_to user_path(book.user.id) do  %>
@@ -31,3 +38,8 @@
   </tr>
 <% end %>
 </tbody>
+</table>
+
+</div>
+</div>
+</div>
