--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,24 +4,35 @@
     <% end %>
   </body>
 
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+
 <%= render 'users/list', user: @user %>
 <%= render 'list', book: @book %>
 
+    </div>
 
-<h1>Book detail</h1>
+<div class="col-md-8 offset-md-1">
+  <h2>Book detail</h2>
 
-<div>
-  <p><%= image_tag @book.user.get_profile_image(100,100) %></p>
-  <p><%= link_to @book.title, edit_book_path(@book) %></p>
-  <p><%= @book.body %></p>
-  <p><%= link_to @book.user.name, user_path(@user) %></p>
+<table class="table">
+  <tbody>
+    <tr>
+      <td><%= image_tag @book.user.get_profile_image(100,100) %>
+      <br><%= link_to @book.user.name, user_path(@user) %></td>
+      <td><%= link_to @book.title, edit_book_path(@book) %></td>
+      <td><%= @book.body %></td>
+
+      <% if @book.user == current_user %>
+      <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success edit_book_27487" %></td>
+      <td><%= link_to "Destroy", book_path(@book.id), class: "btn btn-sm btn-danger destroy_book_27487", method: :delete, "data-confirm" => "本当に消しますか？"%></td>
+      <% end %>
+    </tr>
+  </tbody>
+ </table>
+</div>
+</div>
 </div>
 
-<tbody>
-  <tr>
-    <% if @book.user == current_user %>
-    <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
-    <%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？"%>
-  <% end %>
-  </tr>
-</tbody>
+
