--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,6 +88,21 @@
       </div>
     </nav>
   </header>
+  <main>
+    <p id="notice"></p>
     <%= yield %>
+  </main>
+
+  <div class="container mt-5">
+  	<div class="row">
+    	<div class="mx-auto">
+    	  <footer>
+    		<p>CopyRight Infratop.inc</p>
+    		</footer>
+    	</div>
+    </div>
+  </div>
+
+
   </body>
 </html>
