--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,20 +4,30 @@
     <% end %>
   </body>
 
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
 
 <%= render 'list', user: @user %>
 <%= render 'books/list', book: @book %>
 
+    </div>
 
-<thead>
-  <% @users.each do |user| %>
-  <tr>
-    <th>image</th>
-    <th>name</th>
-  </tr>
-</thead>
+
+<div class="col-md-8 offset-md-1">
+  <h2>Users</h2>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>image</th>
+      <th>name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
 <tbody>
+  <% @users.each do |user| %>
   <tr>
     <td>
       <%= link_to user_path(user.id) do  %>
@@ -29,3 +39,8 @@
   </tr>
   <% end %>
 </tbody>
+</table>
+
+</div>
+</div>
+</div>
