--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,32 +4,48 @@
     <% end %>
   </body>
 
+<div class="container px-5 px-sm-0">
+  <div class="row">
+      <div class="col-md-3">
 
 <%= render 'list', user: @user %>
 <%= render 'books/list', book: @book %>
+
+      </div>
 
 
 <!--ユーザーの投稿情報の記述-->
 <div class="col-md-8 offset-md-1">
   <h2>Books</h2>
 
-<% @books.each do |book| %>
-
     <table class="table table-hover table-inverse">
       <thead>
         <tr>
           <th></th>
-            <th>Title：<%= link_to book.title, book_path(book.id) %></th>
-                <%= link_to user_path(book.user.id) do  %>
-                <%= image_tag book.user.get_profile_image(100,100) %>
-                <% end %>
-            <th>Opinion：<%= book.body %></th>
-            <th colspan="3"></th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+<% @books.each do |book| %>
+          <tr>
+
+          <td><%= link_to user_path(book.user.id) do  %>
+            <%= image_tag book.user.get_profile_image(100,100) %>
+            <% end %>
+          </td>
+
+          <td><%= link_to book.title, book_path(book.id) %></td>
+          <td><%= book.body %></td>
           </tr>
-        </thead>
+          <% end %>
+      </tbody>
+    </table>
 
-
+  </div>
+  </div>
   </div>
 
 
-  <% end %>
+
